--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,11 @@
 
 en:
   hello: "Hello world"
+  date:
+    month_names: [~, Janvier, Février, Mars, Avril, Mai, Juin, Juillet, Août, Septembre, Octobre, Novembre, Décembre]
+    order: 
+  
+      - :day
+      - :month
+      - :year
+  
